<resources>
    <string name="app_name">CoreLibrary</string>

    <string name="guide_ignore">跳过</string>
    <string name="splash_ignore">跳过</string>

    <!-- 通用 -->
    <string name="text_token_timeout">您的账号在其他设备登录，请重新登录</string>
    <string name="text_exit_again">再按一次退出应用</string>
    <!-- main -->
    <string name="main_tab_01">首页</string>
    <string name="main_tab_02">总公司</string>
    <string name="main_tab_03">支部</string>
    <string name="main_tab_04">学习</string>
    <string name="main_tab_05">我的</string>

    <!-- 升级 -->
    <string name="update_dialog_title">系统将升级到V%1$S版本</string>
    <string name="update_dialog_message">是否进行更新</string>
    <string name="update_dialog_cancel">暂不更新</string>
    <string name="update_dialog_commit">立即更新</string>
    <string name="update_status_bar_title">正在下载</string>
    <string name="update_status_bar_description">正在下载</string>
    <string name="update_no_new_version">已经是最新版本</string>
    <string name="update_error">版本检测发生错误，请稍后重试</string>
    <string name="update_downloading">正在下载更新&#8230;</string>

</resources>
