<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/rgMainTab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMainHome"
            style="@style/MainTabStyle"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_01"
            android:text="@string/main_tab_01" />

        <RadioButton
            android:id="@+id/rbMainHeadOffice"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/main_tab_02"
            android:text="@string/main_tab_02" />

        <RadioButton
            android:id="@+id/rbMainPartyBranch"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/main_tab_03"
            android:text="@string/main_tab_03" />

        <RadioButton
            android:id="@+id/rbMainStudy"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/main_tab_04"
            android:text="@string/main_tab_04" />


        <RadioButton
            android:id="@+id/rbMainMy"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/main_tab_05"
            android:text="@string/main_tab_05" />


    </RadioGroup>

    <View
        android:id="@+id/viewMainBottomDivider"
        style="@style/HorizontalLineStyle"
        android:layout_above="@id/rgMainTab" />

    <com.droid.library.widget.ScrollableViewPager
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/viewMainBottomDivider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:overScrollMode="never" />
</RelativeLayout>